# hexapod_robot

./: CMakeLists.txt  LICENSE  README.md  config  package.xml
config/: DeviceList.json  SnapshotConfig.xml  SyncConfig.xml
config/NavigationPlanning/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
config/Startup/: BuildServer1_Startup.sh  ControlModule1_Startup.sh  ControlModule2_Startup.sh  DevModule1_Startup.sh
docs/Architecture/: SystemArchitecture.dia
launch/: move_base.launch
launch/simulation/: simulation_world.launch
scripts/: kill_gazebo.sh
